--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ jobs:
   build:
       docker:
         - image: circleci/openjdk:8-jdk-browsers
-#        - image: circleci/postgres:9.6.3-alpine
-#          environment:
-#            POSTGRES_USER: root
-#            POSTGRES_DB: circle_test
+        - image: circleci/postgres:9.6.3-alpine
+          environment:
+            POSTGRES_USER: root
+            POSTGRES_DB: circle_test
       steps:
         - checkout
         - restore_cache:
@@ -20,4 +20,4 @@ jobs:
         - store_test_results:
             path: target/surefire-reports
         - store_artifacts:
-    path: target/game-0.0.1-SNAPSHOT.jar
+          path: target/game-0.0.1-SNAPSHOT.jar
