--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,24 @@
 version: 2
 jobs:
   build:
-      docker:
-        - image: circleci/openjdk:8-jdk-browsers
-        - image: circleci/postgres:9.6.3-alpine
-          environment:
-            POSTGRES_USER: root
-            POSTGRES_DB: circle_test
-      steps:
-        - checkout
-        - restore_cache:
-            key: game-{{ checksum "pom.xml" }}
-        - run: mvn dependency:go-offline
-        - save_cache:
-            paths:
-              - ~/.m2
-            key: game-{{ checksum "pom.xml" }}
-        - run: mvn package
-        - store_test_results:
-            path: target/surefire-reports
-        - store_artifacts:
-          path: target/game-0.0.1-SNAPSHOT.jar
+    working_directory: ~/game
+    docker:
+      - image: circleci/openjdk:8-jdk-browsers
+      - image: circleci/postgres:9.6.3-alpine
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: circle_test
+    steps:
+      - checkout
+      - restore_cache:
+          key: game-{{ checksum "pom.xml" }}
+      - run: mvn dependency:go-offline
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: game-{{ checksum "pom.xml" }}
+      - run: mvn package
+      - store_test_results:
+        path: target/surefire-reports
+      - store_artifacts:
+        path: target/game-0.0.1-SNAPSHOT.jar
