--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             - ~/.m2
           key: game-{{ checksum "pom.xml" }}
       - run: mvn package
-#      - store_test_results:
-#        path: target/surefire-reports
+      - store_test_results:
+          path: target/surefire-reports
       - store_artifacts:
-        path: target/game-0.0.1-SNAPSHOT.jar
+          path: target/game-0.0.1-SNAPSHOT.jar
